finished project, added background

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="features">
           <ul>
             <li class="copy"><i class="fa-regular fa-copy"></i></li>
-            <li class="share"><i class="fa-regular fa-share-from-square"></i></li>
+            <li class="share"><i class="fa-brands fa-linkedin"></i></li>
+            <li class="tweet"><i class="fa-brands fa-twitter"></i></li>
           </ul>
           <button>New Quote</button>
         </div>
