--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/0828c75931.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="main.css">
 
-  <title>Random Quote Generator | Amanda B</title>
+  <title>Random Quote Generator | Amanda Buttineau</title>
 </head>
 
 <body>
